sample/errors/sample_13.nev

use one
use one

func main() -> int
{
    0
}
